Fixed author pages to function with a scrollbar and removed BigRedButton to avoid missing button bug

--- a/iag-fe/src/application/mobile/components/Writer/writerpagemobile.css
+++ b/iag-fe/src/application/mobile/components/Writer/writerpagemobile.css
@@ -1,22 +1,23 @@
-.writer-mobile{
+.writer-mobile {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     width: 100vw;
+    height: calc(100hv - 5.5rem);
     margin-top: 11rem;
     background-color: var(--main-background-0);
-    min-height: 70vh;
+    overflow: auto;
 }
 
-.writer-name{
+.writer-name {
     color: var(--color-secondary-2-2);
     font-size: 3rem;
     font-family: var(--author-family);
     text-align: center;
 }
 
-* > div.writer-banner{
+*>div.writer-banner {
     position: fixed;
     top: 5.5rem;
     height: 5.5rem;
@@ -25,8 +26,13 @@
     justify-content: center;
 }
 
-.spacing-div{
+.spacing-div {
     height: 5.5rem;
     flex-shrink: 0;
     flex-basis: 0;
+}
+
+.writer-mobile>.article-group {
+    max-height: calc(100vh - 11rem);
+    overflow: auto;
 }
